# mlops_ftiad_2025

./: .gitignore  Dockerfile  Makefile  README.md  create_buckets.sh  docker-compose.yml  pyproject.toml
.dvc/: config
app/: api.py  client_grpc.py  grpc_server.py  logger.py  model_service.proto  model_service_pb2.py  model_service_pb2_grpc.py  models.py  storage.py
dashboard/: app.py
k8s/: app-deployment.yaml  minio-deployment.yaml  mlflow-deployment.yaml
models/: forest.pkl
scripts/: setup_dvc.sh
tests/: __init__.py  grpc_client_test.py  test_api.py  test_storage_mocked.py
