[tool.poetry]
name = "mlops-service"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.120.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
scikit-learn = "^1.7.0"
grpcio = "1.76.0"
grpcio-tools = "1.76.0"
protobuf = "^6.33.0"
streamlit = "^1.51.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
bcrypt = "^4.0.1"
numpy = "^1.24.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
boto3 = "^1.34.0"  # Для S3/Minio
dvc = {extras = ["s3"], version = "^3.0.0"}  # Для версионирования датасетов
mlflow = "^2.9.0"  # Для трекинга

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
